src/test/resources/syntax_errors/if_else_in_funcall_expr.notc
void main() {
    fun(if (true) {} else {});
}
